--- a/src/components/contactIem/ContactItem.module.css
+++ b/src/components/contactIem/ContactItem.module.css
@@ -3,12 +3,37 @@
     background-color: rgb(233, 96, 96);
     border: none;
     cursor: pointer;
-    height: 20px;
+    height: 40px;
     width: 120px;
+
     margin-top: 20px;
+    border: 5px solid #1C6EA4;
+    border-radius: 40px 40px 40px 40px;
+
+    margin: 0 auto;
+
 }
 .name{
     font-size: 18px;
-    color: rgb(105, 96, 233);
+color: black;
+font-size: 24px;
+background-color: #7fe77f;
+border: 5px solid #1C6EA4;
+border-radius: 40px 40px 40px 40px;
   
+}
+
+
+
+.phoneListItem{
+    border: 1px solid black;
+height: 400px;
+   
+ 
+}
+.number{
+    border: 5px solid #1C6EA4;
+border-radius: 40px 40px 40px 40px;
+background-color: #3d2bdf;
+
 }
